builds/dmv_css/quiz.css
//@import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);

body { background-color: #fff; padding: 20px; text-align: center;}

#myQuiz {
  font-family: 'Times New Roman', Times, serif; font-size: 12px; font-weight: 400;
  width: 1000px; height: 1000px;
  position: relative;
  overflow: hidden;
  color: #fff;
  background: #000 url(../dmv_images/dark-background.jpg) no-repeat 0px 0px; margin: auto;
}

#myQuiz h1 {
    font-weight: 100; font-size: 2.0em; text-transform: uppercase; margin: 0px;
    position: absolute; top: 25px; left: 36px; margin: auto;
}

#myQuiz h1 span{
      display: block; font-weight: 100; font-family: 'Times New Roman', Times, serif;
      font-size: 3.2em; line-height: 100px;  margin: auto;
}

#myQuiz h2 {  font-size: 4em; margin: 0px; font-weight: 100; margin-top: 80px; margin-left: 100px;}
#myQuiz h3 {  font-size: 2.8em; margin-top: 40px;  font-weight: 100; text-align: left;}
#myQuiz p { font-size: 1.8em; margin: 0px px 14px 0px;}
#myQuiz .btn {
    margin: auto;
    text-align: center;
    font-size: 16px;
    display: inline-grid; cursor: pointer; background-color: #c04b01;
    color: #fff; text-decoration: none;
    padding: 5px 15px; border-radius: 20px;

}

/* Progress Bar */

#myQuiz .progress { width: 900px; position: absolute; top: 180px; left: 40px;}
#myQuiz .progress div {
              position: relative; display: inline-block; width: 20px; height: 20px; margin-right: 30px;
              border-radius: 50%; background-color: rgba(255, 255, 255, .2); transition: background-color 1s;
}

#myQuiz .progress div::after{
  content: ''; display: block; position: absolute; top: -60px; left: -15px;
  width: 55px; height: 30px; background: url(../dmv_images/ring.svg) no-repeat 0px 0px;
  transition: opacity 1s, top 1s; opacity: 0;
}

#myQuiz .progress div.on,
#myQuiz .progress div.answered { background-color: #efbe5e;}

#myQuiz .progress div.correct::after { top: -5px; opacity: 1;}

/* Intro */
#myQuiz .intro { position: absolute; top: 225px; left: 1930px; width: 550px; }
#myQuiz .intro p { margin: 0px 0px 40px 0px; }


/* Question */
#myQuiz .question { width: 700px; position: absolute; top: 400px; left: 1930px;}
#myQuiz .question .txt { font-size: 1.5em; margin: 0px 0px 20px 0px;}
#myQuiz .question .ans {
      display: inline-block; font-size: 1.5em; width: 350px; border: 2px solid rgba(238, 189, 102, .4);
      border-radius: 7px; padding: 10px; margin: 0px 15px 15px 0px; position: relative;
}

#myQuiz .question .ans.selected { border-color: #be4b16; }
#myQuiz .question .ans.correct { border-color: #459e2e; }

#myQuiz .question .ans::after {
        content: ''; display: block; width: 20px; height: 20px;
        background: no-repeat 0px 0px; background-size: 20px 20px;
        position: absolute;  top: 5px; right: 5px;
 }

 #myQuiz .question .ans.selected::after { background-image: url(../dmv_images/icon_incorrect.svg); }
 #myQuiz .question .ans.correct::after { background-image: url(../dmv_images/icon_correct.svg); }

#myQuiz .question.unanswered .ans { cursor: pointer; }
#myQuiz .question.unanswered .ans:hover { background-color: rgba(238, 189, 102, .2)}

#myQuiz .question.answered .ans { cursor: default; }

#myQuiz .question .ans.image {
          min-height: 60px; padding: 0px;
          background-repeat: no-repeat;
          background-position: 0px 0px;
 }
/* Feedback */

#myQuiz .feedback { color: #efbe5e; margin-top: 50px; transition: opacity 1.5s, margin-top 1.5s;
  visibility: hidden; opacity: 0;}

#myQuiz .feedback .btn { margin-top: 5px;}
#myQuiz .feedback strong { color: #fff; }

#myQuiz .answered .feedback { visibility: visible; opacity: 1; margin-top: 10px;}


/* Results */

#myQuiz .results { position: absolute; top: 450px; left:1930px; width: 500px; }
#myQuiz .results .share { margin-top: 40px; }
#myQuiz .results .share a.btn {
            margin-right: 20px; padding: 9px 15px 8px 42px;
            background-repeat: no-repeat;
            background-position: 10px 5px;
            background-size: 25px 25px;
}

#myQuiz .results .share a.btn.email {
        background-color: #f0a121; background-image: url(../dmv_images/icon_email.svg);}

#myQuiz .results .share a.btn.twitter {
                background-color: #59adeb; background-image: url(../dmv_images/icon_twitter.svg);}

#myQuiz .active, #myQuiz .inactive { transition: left 1.5s ease-in-out;}
#myQuiz .active { left: 40px; }

#myQuiz .intro.inactive, #myQuiz.inactive.answered { left:-1350px; }


@media screen and (max-width: 650px){
  body {padding: 0px; margin: 0px;}
  #myQuiz { width: 320px; background-size: 320px auto; }
  #myQuiz h1{ width: 300px; font-size: .9em; top: 15px; left: 15px; }
  #myQuiz h1 span { line-height: 43px; }
  #myQuiz h2 { margin: 0px;}
  #myQuiz h3 { font-size: 1.2em; margin-bottom: 15px;}

  #myQuiz .progress { width: 300px; top: 70px; left: 25px;}
  #myQuiz .progress div { width: 25px; height: 25; margin-right: 20px;}
  #myQuiz .progress div::after { top: -30px; width: 53px; height: 33px;}

  #myQuiz .intro { width: 300px; font-size: 0.5em; top: 90px; left: 330px; }

  #myQuiz .question { width: 300px; top: 135px; left: 330px; }
  #myQuiz .question .txt {font-size: 1.4em; margin-bottom: 15px;}
  #myQuiz .question .ans { font-size: 1em; padding: 5px 10px; margin-bottom: 10px;}
  #myQuiz .question .ans.image { min-height: 45px; background-size: auto 45px; }
  #myQuiz .question .ans.image:hover { background-color: #000; }

  #myQuiz .results { width: 260px; top: 200px; left: 330px; }
  #myQuiz .results .share {margin-top: 20px;}
  #myQuiz .results a.btn {margin-bottom: 20px;}

  #myQuiz .active { left: 25;}
  #myQuiz .intro.inactive, #myQuiz .inactive.answered {left: -650px; }

}

